FirefoxTempBase/chrome/userChrome.css
menubar {
	margin-top: -1px !important;
}

findbar {
	margin-bottom: -1px !important;
}

/* Based on: https://bbs.archlinux.org/viewtopic.php?id=166169 */
.tabbrowser-tab[selected="true"] {
	background: #4b6983 !important;
	color: #FFFFFF !important;
	border: none !important;
	border-bottom: #c6c4bf 1px solid !important;
	border-right: #9e9a91 1px solid !important;
	border-radius: 0 !important;
	padding-left: 5px !important;
	padding-right: 5px !important;
}

.tabbrowser-tab:not([selected="true"]) {
	background: #eeebe7 !important;
	border: none !important;
	border-bottom: #c6c4bf 1px solid !important;
	border-right: #9e9a91 1px solid !important;
	border-radius: 0 !important;
	padding-left: 5px !important;
	padding-right: 5px !important;
}

.tabs-newtab-button {
	background: #f2f0eb !important;
	border: none !important;
	border-bottom: #c6c4bf 1px solid !important;
	border-right: #9e9a91 1px solid !important;
	border-radius: 0 !important;
	padding-left: 5px !important;
	padding-right: 5px !important;
}

.tab-close-button {
	display: none !important;
}

.tabbrowser-tabs {
	border-left: #9e9a91 1px solid !important;
}

